<resources>
    <string name="app_name">Twitter Client</string>
    <string name="msg_welcome">Welcome to Twitter</string>
    <string name="msg_welcome_navigation_connect">まずはPINコードを取得</string>
    <string name="msg_welcome_navigation_pin">取得したPINコードを入力</string>
    <string name="hint_pin">PIN</string>
    <string name="btn_enter_pin">GO</string>
    <string name="timeline">TimeLine</string>
    <string name="notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
