<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="kotako.java.info.bluebird.presentation.activity.AuthorizationActivity">

    <TextView
            android:id="@+id/text_msg_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/msg_welcome"/>

    <TextView
            android:id="@+id/text_msg_welcome_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_below="@id/text_msg_welcome"
            android:text="@string/msg_welcome_navigation_connect"/>

    <Button
            android:id="@+id/btn_connect_twitter"
            android:layout_below="@id/text_msg_welcome_connect"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="connect"/>

    <TextView
            android:id="@+id/text_enter_pin"
            android:text="@string/msg_welcome_navigation_pin"
            android:layout_below="@id/btn_connect_twitter"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_below="@id/text_enter_pin">

        <EditText
                android:id="@+id/edittext_input_pin"
                android:hint="@string/hint_pin"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btn_enter_pin"
                android:text="@string/btn_enter_pin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>
